# scraper

./: .gitignore  Cargo.toml  README.md
.github/: FUNDING.yml
src/: downloader.rs  error.rs  lib.rs
src/extractor/: mod.rs  parser.rs
src/pages/: anilist.rs  asuratoon.rs  kitsu.rs  mangaupdates.rs  mod.rs
src/pages/animeplanet/: mod.rs  tags.rs
src/pages/hidden/: mod.rs  multi.rs  single.rs
src/pages/mangaupdates/: data.rs  mod.rs  search.rs
src/services/: icon.rs  metadata.rs  mod.rs  multisite.rs  search.rs  singlesite.rs
