[package]
name = "manread_scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.19.0"
api_structure = { path = "../api_structure" }
openssl = "0.10.55"
js-sandbox = "0.2.0-rc.2"
base64 = "0.22.0"
serde_json = "1.0.64"
serde = "1.0.164"
reqwest = { version = "0.11.18", features = ["json", "socks"] }
bytes = "1.4.0"
futures = "0.3.28"
tokio = { version = "1.16.1", features = ["full"] }
rand = "0.8.5"
regex = "1.10.2"
urlencoding = "2.1.3"
log = "0.4.19"

[dev-dependencies]
walkdir = "2.3.3"
