[package]
name = "manread_scraper"
edition.workspace = true
rust-version.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = {workspace = true}
api_structure = {workspace = true}
openssl = {workspace = true}
js-sandbox = {workspace = true}
base64 = {workspace = true}
serde_json = {workspace = true}
serde = {workspace = true}
reqwest = { workspace = true, default-features = false, features = ["json", "socks"] }
bytes = {workspace = true}
futures = {workspace = true}
tokio = { workspace = true, features = ["full"] }
rand = {workspace = true}
regex = {workspace = true}
urlencoding = {workspace = true}
log = {workspace = true}
pg-embed = {workspace = true}
tokio-postgres = {workspace = true}

[dev-dependencies]
walkdir = {workspace = true}
